--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -46,7 +46,7 @@
     \end{table}
 
     \scriptsize
-    \emph{Refer to Page (\pageref{sec:abbrev}) for the abbreviations expanded into words.}
+    \emph{Refer to Page (\pageref{sec:abbrev}) for the abbreviations used in this table.}
 
 % ?? Added acronyms full at the bottom
 
